Changed box sizing to fix horizontal scroll

--- a/css/screen.css
+++ b/css/screen.css
@@ -178,13 +178,15 @@ p {
   position:relative;
   width:100%;
   height:100%;
-    margin: 80px;
-  }
+  padding:80px 80px;
+  box-sizing: border-box;
+  -moz-box-sizing:border-box; /* Firefox */
+  -webkit-box-sizing:border-box; /* Safari */
+}
 
 .quote h1{ 
   text-align:left;
   color:#fff;
-  margin:80px 80px;
   max-width: 900px;
   font-size: 56px;
   text-shadow: 0px 4px 9px rgba(0, 0, 0, 1);0px rgba(255, 255, 255, 0.4);
